--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node server.js",
+  "client": "echo Starting client in directory: $PWD && cd client && npm start",
+  "server": "nodemon server.js",
+  "dev": "concurrently \"npm run server\" \"npm run client\""
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,5 +21,9 @@
     "openai": "^4.53.0",
     "react-syntax-highlighter": "^15.5.0",
     "technicalindicators": "^3.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.4"
   }
 }
