--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "ansi_up": "^6.0.2",
     "axios": "^1.7.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.5.1",
     "openai": "^4.53.0",
     "react-syntax-highlighter": "^15.5.0",
