--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.5.1",
     "openai": "^4.53.0",
+    "react-json-pretty": "^2.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "technicalindicators": "^3.1.0"
   },
