--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.1",
     "openai": "^4.53.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-json-pretty": "^2.2.0",
+    "react-router-dom": "^6.25.1",
     "react-syntax-highlighter": "^15.5.0",
     "technicalindicators": "^3.1.0",
     "ws": "^8.18.0"
