--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-ws": "^5.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.1",
     "openai": "^4.53.0",
