--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express-session": "^1.18.0",
     "express-ws": "^5.0.2",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.53.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
