--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   }
 }
