--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "echo Starting client in directory: $PWD && cd client && npm start",
-    "server": "nodemon server.js",
+    "server": "nodemon --ignore uploads/ server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
