--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "ansi_up": "^6.0.2",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "express-ws": "^5.0.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
